package voiceReport;
syntax = "proto3";

message voice_report {
    string uuid = 1;
    int64 companyId = 2;
    optional string status = 3;
    optional int64 destination = 4;
    optional string createdAt = 5;
    optional string startTime = 6;
    optional string endTime = 7;
    optional int64 callerId = 8;
    optional int64 duration = 9;
    optional int64 billingDuration = 10;
    optional string ivrInputs = 11;
    optional string billing = 12;
    optional string rate = 13;
    optional string charged = 14;
    optional string vendorBilling = 15;
    optional string vendorRate = 16;
    optional string vendorCharged = 17;
    optional int64 agentId = 18;
    optional string disconnectedBy = 19;
    optional string vendorRequestId = 20; 
}